test/integration/bad/new/bad_sized_type_in_fn3.stan
functions{
  vector[3] foo(real x){
    print(x);
  }
}
